--- a/layouts/partials/blocks/recent projects.html
+++ b/layouts/partials/blocks/recent projects.html
@@ -1,1 +1,1 @@
-content: <embed src="/content/recentProjects/Methods_trajectory_planner.pdf" type="application/pdf">
+content: <embed src="./content/recentProjects/Methods_trajectory_planner.pdf" type="application/pdf">
