--- a/layouts/partials/blocks/recent-projects.html
+++ b/layouts/partials/blocks/recent-projects.html
@@ -1,4 +1,4 @@
-<div class="recent projects">
+<div class="recent-projects">
   <h2>Embedded PDF</h2>
   <iframe src="/static/uploads/Methods_trajectory_planner.pdf" width="100%" height="600px" style="border: none;">
     This browser does not support PDFs. Please download the PDF to view it:
