--- a/layouts/partials/blocks/recent-projects.html
+++ b/layouts/partials/blocks/recent-projects.html
@@ -1,7 +1,2 @@
-<div class="recent-projects">
-  <h2>Embedded PDF</h2>
-  <iframe src="/static/uploads/Methods_trajectory_planner.pdf" width="100%" height="600px" style="border: none;">
-    This browser does not support PDFs. Please download the PDF to view it:
-    <a href="/static/uploads/Methods_trajectory_planner.pdf">Download PDF</a>.
-  </iframe>
-</div>
+<embed src="{{ .Get 0 }}" width="100%" height="1000px" type="application/pdf">
+
