--- a/layouts/shortcodes/pdfembed.html
+++ b/layouts/shortcodes/pdfembed.html
@@ -1,1 +1,3 @@
-<embed src="{{ .Get "src" }}" width="100%" height="800px" type="application/pdf">
+<div style="width: 100%; height: 800px;">
+  <embed src="{{ . }}" type="application/pdf" width="100%" height="100%">
+</div>
