--- a/layouts/partials/blocks/recent-projects.html
+++ b/layouts/partials/blocks/recent-projects.html
@@ -1,3 +1,3 @@
 <div class="project-pdf">
-  <iframe src="uploads/Cosyne2025_vf.pdf" width="80%" height="800px" style="border: none;"></iframe>
+  <iframe src="uploads/cosyne_abstract_2025__trajectory_learning.pdf" width="80%" height="400px" style="border: none;"></iframe>
 </div>
