--- a/layouts/partials/blocks/recent-projects.html
+++ b/layouts/partials/blocks/recent-projects.html
@@ -1,6 +1,6 @@
 <div class="project-pdf">
-  <iframe src="uploads/cosyne_abstract_2025__trajectory_learning.pdf" width="80%" height="400px" style="border: none;"></iframe>
-  <p>Animals quickly learn to navigate to rewarding or salient landmarks in their environments. 
+ <p><strong>Model for spatial learning via effecient inference and exploration</strong></p>
+ <p>Animals quickly learn to navigate to rewarding or salient landmarks in their environments. 
     However, existing models often require thousands of trials to learn contingencies that animals learn within tens of trials, and 
     they do so via unstructured sequences of actions that do not mimic real behavior. In this work, we study rapid learning in a 
     hidden-target foraging task for mice in which animals learn to intercept an uncued target location within an open arena. In 
@@ -8,4 +8,6 @@
     learning—to understand how animals efficiently explore space and quickly modify their behavior based on experience. Our 
     model succeeds in replicating animals fast learning dynamics (learning to intercept hidden targets in tens of trials) 
     and mimics their naturalistic trajectories. </p>
+  <iframe src="uploads/cosyne_abstract_2025__trajectory_learning.pdf" width="80%" height="400px" style="border: none;"></iframe>
+  
 </div>
